--- a/IVGDb/IVGDb/Views/Shared/_Layout.cshtml
+++ b/IVGDb/IVGDb/Views/Shared/_Layout.cshtml
@@ -38,5 +38,8 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+    <script type="text/javascript" src="~/Scripts/IVGDbScripts/ivgdbscripts.js"></script>
+    <script type="text/javascript" src="~/Scripts/jquery.validate.min.js"></script>
+    <script type="text/javascript" src="~/Scripts/additional-methods.min.js"></script>
 </body>
 </html>
