--- a/IVGDb/IVGDb/Views/User/Register.cshtml
+++ b/IVGDb/IVGDb/Views/User/Register.cshtml
@@ -8,10 +8,10 @@
 
 <h2>Register</h2>
 
-@using (Html.BeginForm("Register", "User", FormMethod.Post))
+@using (Html.BeginForm("Register", "User", FormMethod.Post, new { id = "Registration-form" }))
 {
     <div class="row">
-        @if(ViewBag.Unregistered == "true")
+        @if (ViewBag.Unregistered == "true")
         { 
             <div class="text-warning">
                 It appears you aren't logged into your account, or do not have one. Please register or login to your account to 
