--- a/IVGDb/IVGDb/Views/Shared/_LoginPartial.cshtml
+++ b/IVGDb/IVGDb/Views/Shared/_LoginPartial.cshtml
@@ -24,21 +24,8 @@ else
 {
     <ul class="nav navbar-nav navbar-right">
         <li>@Html.ActionLink("Register", "Register", "User", routeValues: null, htmlAttributes: new { id = "Register-link" })</li>
-        <li class="dropdown" id="Menu-login">
-            <a class="dropdown-toggle" href="#" data-toggle="dropdown" id="Nav-login">Login</a>
-            <div class="dropdown-menu" id="Login-menu" style="padding:17px;">
-                <div id="Login-img">
-                    <img src="~/Images/videogames.jpg" width="184" height="184" />
-                </div>
-                @using(Html.BeginForm("Login", "User", FormMethod.Post, new { @class="form", id="Form-login" }))
-                { 
-                    <input type="text" id="Username" name="Username" class="login-input" placeholder="Username" />
-                    <input type="password" id="Password" name="Password" class="login-input" placeholder="Password" />
-                    <span class="no-account-link">Don't have an account?</span>
-                    @Html.ActionLink("Register here!", "Register", "User", null, new { @class="no-account-link" })<br />                    
-                    <button type="submit" id="Btn-login" class="btn">Login</button>
-                }
-            </div>
+        <li>
+            <a data-toggle="modal" data-target="#Login-modal" id="Login-link">Login</a>     
         </li>
     </ul>
 }
