adding null checking

--- a/IVGDb/IVGDb/Views/VideoGame/ShowGame.cshtml
+++ b/IVGDb/IVGDb/Views/VideoGame/ShowGame.cshtml
@@ -11,10 +11,10 @@
     <h2>
         @Html.DisplayFor(m => m.Title)
 
-    <div class="game-controls">
-        <a href="~/VideoGame/EditGame?gameID=@Model.GameID"><i class="glyphicon glyphicon-wrench"></i></a>
-        <a href="~/VideoGame/DeleteGame?gameID=@Model.GameID"><i class="glyphicon glyphicon-trash"></i></a>
-    </div>
+        <div class="game-controls">
+            <a href="~/VideoGame/EditGame?gameID=@Model.GameID"><i class="glyphicon glyphicon-wrench"></i></a>
+            <a href="~/VideoGame/DeleteGame?gameID=@Model.GameID"><i class="glyphicon glyphicon-trash"></i></a>
+        </div>
     </h2>
 
     <div class="game-container">
@@ -36,9 +36,12 @@
                     @Html.DisplayFor(m => m.ReleaseDate)
                 </p>
                 <p>
-                    @foreach (GamesFor gameConsole in Model.GamesFors)
+                    @if (Model.GamesFors != null && Model.GamesFors.Count > 0)
                     {
-                        <span class="label label-danger">@gameConsole.Console.Name</span>;
+                        foreach (GamesFor gameConsole in Model.GamesFors)
+                        {
+                            <span class="label label-danger">@gameConsole.Console.Name</span>;
+                        }
                     }
                 </p>
             </div>
