final touch-ups before submission

--- a/IVGDb/IVGDb/Views/User/Manage.cshtml
+++ b/IVGDb/IVGDb/Views/User/Manage.cshtml
@@ -32,11 +32,11 @@
                             {
                                 if (role.RoleName == user.Role.RoleName)
                                 {
-                                    <option value="@role.ID" selected="selected">@role.RoleName</option>
+                                    <option value="@role.RoleID" selected="selected">@role.RoleName</option>
                                 }
                                 else
                                 {
-                                    <option value="@role.ID">@role.RoleName</option>
+                                    <option value="@role.RoleID">@role.RoleName</option>
                                 }
                             }
                         </select>
